--- a/main.html
+++ b/main.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favourite Animal: Panda</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h2>My Favourite Animal: Panda</h2>
+
+    <!-- Panda Image -->
+    <img src="https://www.bing.com/ck/a?!&&p=d873a262b4b29aeaJmltdHM9MTcyODYwNDgwMCZpZ3VpZD0wZDBmZjEyOS0yMWNiLTZjZDAtM2QxNi1lMjllMjBhOTZkMDUmaW5zaWQ9NTcxOA&ptn=3&ver=2&hsh=3&fclid=0d0ff129-21cb-6cd0-3d16-e29e20a96d05&u=a1L2ltYWdlcy9zZWFyY2g_cT1wYW5kYSUyMGltYWdlcyZGT1JNPUlRRlJCQSZpZD1ERjRCMkM2Mjg4OTUyOUNDQzMxQzI0RDQ0M0ZDQkQxQjYwODlERTZC&ntb=1" alt="A cute panda sitting and eating bamboo" width="500">
 
 </body>
 
