--- a/main.html
+++ b/main.html
@@ -11,10 +11,9 @@
 
 <body>
     <h2>My Favourite Animal: Panda</h2>
-
+ <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Grosser_Panda.JPG" 
+         alt="A cute panda sitting and eating bamboo">
     <!-- Panda Image -->
-    <img src="https://www.bing.com/ck/a?!&&p=d873a262b4b29aeaJmltdHM9MTcyODYwNDgwMCZpZ3VpZD0wZDBmZjEyOS0yMWNiLTZjZDAtM2QxNi1lMjllMjBhOTZkMDUmaW5zaWQ9NTcxOA&ptn=3&ver=2&hsh=3&fclid=0d0ff129-21cb-6cd0-3d16-e29e20a96d05&u=a1L2ltYWdlcy9zZWFyY2g_cT1wYW5kYSUyMGltYWdlcyZGT1JNPUlRRlJCQSZpZD1ERjRCMkM2Mjg4OTUyOUNDQzMxQzI0RDQ0M0ZDQkQxQjYwODlERTZC&ntb=1" alt="A cute panda sitting and eating bamboo" width="500">
-
 </body>
 
 </html>
